// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderContent renders completed state correctly 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "paddingBottom": 24,
          "paddingTop": 32,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 20,
              "height": 40,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://example.com/eth.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "bottom": 0,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 8,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001a",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={
                {
                  "uri": "https://example.com/eth.png",
                }
              }
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 40,
            "fontWeight": 700,
            "letterSpacing": 0,
            "lineHeight": 50,
            "marginTop": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
      testID="ramps-order-details-token-amount"
    >
      0.05
       
      ETH
    </Text>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Status
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "display": "flex",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#457a39",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Complete
      </Text>
      <TouchableOpacity
        onPress={[Function]}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginTop": 4,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#4459ff",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 14,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "marginRight": 4,
                },
                undefined,
              ]
            }
          >
            View on Transak
          </Text>
          <SvgMock
            fill="currentColor"
            name="Export"
            style={
              [
                {
                  "color": "#4459ff",
                  "height": 16,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Order ID
    </Text>
    <TouchableOpacity
      onPress={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginRight": 8,
              },
              undefined,
            ]
          }
        >
          ...abc123
        </Text>
        <SvgMock
          fill="currentColor"
          name="Copy"
          style={
            [
              {
                "color": "#121314",
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Date and time
    </Text>
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Nov 14 at 5:13 pm
    </Text>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Fees
    </Text>
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      2.5 USD
    </Text>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Total
    </Text>
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      100 USD
    </Text>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "paddingBottom": 16,
          "paddingTop": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          Card purchases typically take a few minutes
        </Text>
        <SvgMock
          fill="currentColor"
          name="Info"
          style={
            [
              {
                "color": "#686e7d",
                "height": 16,
                "marginLeft": 4,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`OrderContent renders loading state when order has no amount 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "paddingBottom": 24,
          "paddingTop": 32,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 20,
              "height": 40,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://example.com/eth.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "bottom": 0,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 8,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001a",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={
                {
                  "uri": "https://example.com/eth.png",
                }
              }
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 40,
            "fontWeight": 700,
            "letterSpacing": 0,
            "lineHeight": 50,
            "marginTop": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
      testID="ramps-order-details-token-amount"
    >
      0.05
       
      ETH
    </Text>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Status
    </Text>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "display": "flex",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3c4d9d0f",
              "borderRadius": 4,
              "display": "flex",
              "height": 18,
              "width": 96,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Order ID
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 4,
            "display": "flex",
            "height": 18,
            "width": 128,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Date and time
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 4,
            "display": "flex",
            "height": 18,
            "width": 160,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Fees
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 4,
            "display": "flex",
            "height": 18,
            "width": 80,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Total
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 4,
            "display": "flex",
            "height": 18,
            "width": 96,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "paddingBottom": 16,
          "paddingTop": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          Card purchases typically take a few minutes
        </Text>
        <SvgMock
          fill="currentColor"
          name="Info"
          style={
            [
              {
                "color": "#686e7d",
                "height": 16,
                "marginLeft": 4,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
